# partoss

./: CMakeLists.txt  _dos.h  _portlib.cpp  _portlib.h  archives.cpp  archives.h  arealias.cpp  arealias.h  astring.cpp  astring.h  attach.cpp  attach.h  buftomsg.cpp  buftomsg.h  buftopkt.cpp  buftopkt.h  buftosqd.cpp  buftosqd.h  chains.cpp  chains.h  config.h  control.cpp  control.h  crc32.cpp  crc32.h  diskmap.h  envirasm.asm  environ.cpp  environ.h  errors.cpp  errors.h  exmpl_c.c  globext.h  globfunc.h  handyman.cpp  handyman.h  headers.cpp  headers.h  killold.cpp  killold.h  (+62 more)
doc/: compress.cfg  crttempl.net  crttempl.tpl  killold.tpl  manager.tpl  manbad.tpl  partoss.cfg  partoss.crt  partoss.doc  partoss.hlp  partoss.pst  pt105.cfg  pt105eng.cfg  pt106.cfg  reply.tpl  speed_up.doc  squish.cfg  structur.doc  topeter.txt  vacation.tpl  whats105.doc  whats105.eng  whats106.doc  whatsnew.doc
